<resources>
    <string name="app_name">Flamingo</string>

    // sign in
    <string name="email_phone">Email / Phone</string>
    <string name="sign_in">Log In</string>
    <string name="forgotpassword">Forget Password?</string>
    <string name="forgotpassword2">Forget Password</string>
    <string name="backtologin">Back To Login?</string>
    <string name="dont_have_account">Not a member?   Signup now</string>

    // main sign up
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">-----OR-----</string>
    <string name="sign_up">Sign Up</string>
    <string name="already">Sign Up</string>
    <string name="continu">Continue</string>
    <string name="verified">Mobile Number Successfully Verified</string>

    // otp
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="we_will">We will send an OTP to your mobile number</string>
    <string name="enter_your">Enter Your Country Code And Mobile Number</string>
    <string name="countrycode">91</string>
    <string name="number">9876543210</string>

    //otp next
    <string name="enter_the_otp">Enter the OTP code sent to</string>
    <string name="not_receive">Didn\'t receive the OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="smartreply">Smart Reply</string>

    // fragment status
    <string name="add_text">Add Text Status</string>
    <string name="status_updates">Status Updates</string>
    <string name="eemail">Email</string>

    // chat detail
    <string name="hello">Hello</string>
    <string name="offline">Offline</string>
    <string name="enter_your_message">Enter Your Message</string>


    <string name="reserved">Reserved For Future Work</string>
    <string name="tap">Tap to Chat</string>
    <string name="no_status">No Status</string>
    <string name="langauge">Language not Supported</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add Post</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="user_bio">Bio</string>
    <string name="logout">Logout</string>
    <string name="text">100</string>
    <string name="addcomment">Add a comment..</string>
    <string name="c">Comments</string>
    <string name="write_something_about_yoursef">Write something about yourself.</string>

    <string name="bio">I like travel and food.</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="likes">Likes</string>
    <string name="save">Save</string>
    <string name="website_or_link">Website or Link</string>
    <string name="link">www.youtube.com</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="browse_images">Browse Images</string>
    <string name="description">Description</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="type_username">Type Username</string>
    <string name="share_story">Share Story</string>
    <string name="your_messages">Your Messages</string>
    <string name="view_comments">View All Comments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>