<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.chatapp.example.flamingo.phase1.LoginActivity"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_30mdp"
            android:layout_marginStart="@dimen/_30mdp"
            android:gravity="center_horizontal"
            tools:ignore="UselessParent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="@dimen/_120mdp"
                android:layout_height="@dimen/_120mdp"
                app:lottie_rawRes="@raw/chat"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_marginBottom="@dimen/_30mdp"
                />

            <EditText
                android:id="@+id/signinemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15mdp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@drawable/square"
                tools:ignore="Autofill"
                android:fontFamily="@font/oxygen"/>

            <EditText
                android:id="@+id/signinpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_35mdp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/square"
                tools:ignore="Autofill"
                android:fontFamily="@font/oxygen"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35mdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14mdp"
                android:textStyle="bold"
                android:background="@drawable/roundbutton"
                android:padding="@dimen/_5mdp"
                android:fontFamily="@font/oxygen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25mdp"
                android:fontFamily="@font/oxygen"
                android:text="@string/or"
                android:textSize="@dimen/_13font_mdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25mdp"
                android:gravity="center"
                android:fontFamily="@font/oxygen_light"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/goToToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_1mdp"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/cssblue"
                    android:textSize="@dimen/_13font_mdp"
                    android:fontFamily="@font/oxygen"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
