<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.chatapp.example.flamingoapp.phase2.SettingsActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_20mdp"
        android:layout_height="@dimen/_20mdp"
        android:background="@drawable/arrow"
        android:layout_marginBottom="@dimen/mines20mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginStart="@dimen/_10mdp"
        android:contentDescription="@string/bio" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20mdp">


        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_10mdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grad2"
                android:orientation="vertical"
                android:padding="@dimen/_2mdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userPost"
                    android:layout_width="@dimen/_90mdp"
                    android:layout_height="@dimen/_90mdp"
                    android:src="@drawable/user9"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_1mdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/addPostButton"
                android:layout_width="@dimen/_20mdp"
                android:layout_height="@dimen/_20mdp"
                android:layout_marginStart="@dimen/_24mdp"
                android:layout_marginTop="@dimen/mines20mdp"
                android:background="@drawable/plus2"
                android:contentDescription="@string/search" />
        </LinearLayout>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15mdp"
            android:ems="10"
            android:inputType="text"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            tools:ignore="Autofill,LabelFor"
            android:fontFamily="@font/oxygen"
            android:layout_below="@id/text1"
            android:text="@string/username" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/blue"
            android:fontFamily="@font/oxygen"
            android:layout_marginBottom="@dimen/mines8mdp"
            android:background="@color/white"
            android:textSize="@dimen/_12font_mdp"
            android:paddingStart="@dimen/_5mdp"
            android:paddingEnd="@dimen/_5mdp"
            android:layout_marginStart="@dimen/_6mdp"
            android:layout_below="@id/linear" />


        <EditText
            android:id="@+id/userBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15mdp"
            android:ems="10"
            android:inputType="text"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            tools:ignore="Autofill,LabelFor"
            android:fontFamily="@font/oxygen"
            android:layout_below="@id/text2"
            android:text="@string/bio" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_bio"
            android:textColor="@color/blue"
            android:fontFamily="@font/oxygen"
            android:layout_marginBottom="@dimen/mines8mdp"
            android:background="@color/white"
            android:textSize="@dimen/_12font_mdp"
            android:paddingStart="@dimen/_5mdp"
            android:paddingEnd="@dimen/_5mdp"
            android:layout_marginStart="@dimen/_6mdp"
            android:layout_below="@+id/editName" />


        <EditText
            android:id="@+id/userLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15mdp"
            android:ems="10"
            android:inputType="text"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            tools:ignore="Autofill,LabelFor"
            android:fontFamily="@font/oxygen"
            android:layout_below="@id/link"
            android:text="@string/link" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_or_link"
            android:textColor="@color/blue"
            android:fontFamily="@font/oxygen"
            android:layout_marginBottom="@dimen/mines8mdp"
            android:background="@color/white"
            android:textSize="@dimen/_12font_mdp"
            android:paddingStart="@dimen/_5mdp"
            android:paddingEnd="@dimen/_5mdp"
            android:layout_marginStart="@dimen/_6mdp"
            android:layout_below="@+id/userBio" />


        <TextView
            android:layout_below="@+id/userLink"
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35mdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14mdp"
            android:textStyle="bold"
            android:background="@drawable/buttongrad1"
            android:fontFamily="@font/oxygen"
            android:textAlignment="center"
            android:padding="@dimen/_6mdp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_10mdp"/>

    </RelativeLayout>


</LinearLayout>