<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.example.flamingoapp.phase1.SignUpActivity"
    android:orientation="vertical"
    android:gravity="center"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/_18mdp"
        android:layout_marginLeft="@dimen/_18mdp"
        android:gravity="center_horizontal"
        tools:ignore="UselessParent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="@dimen/_100mdp"
            android:layout_height="@dimen/_100mdp"
            app:lottie_rawRes="@raw/chat"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginBottom="@dimen/_8mdp"
            />

        <EditText
            android:id="@+id/signupUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18mdp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            android:textStyle="bold"
            android:drawableStart="@drawable/userc"
            android:drawablePadding="@dimen/_18mdp"
            tools:ignore="Autofill"
            android:textColorHint="@color/quantum_grey600"/>

        <EditText
            android:id="@+id/signupFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18mdp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            android:textStyle="bold"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/_18mdp"
            tools:ignore="Autofill"
            android:textColorHint="@color/quantum_grey600"/>

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8mdp"
            android:background="@drawable/square"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_18mdp"
            android:layout_marginTop="@dimen/_18mdp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/_18mdp"
            tools:ignore="Autofill"
            android:textColorHint="@color/quantum_grey600"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/square"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/_14mdp">

            <ImageView
                android:layout_width="@dimen/_25mdp"
                android:layout_height="@dimen/_25mdp"
                android:background="@drawable/lock"
                android:layout_marginStart="@dimen/_8mdp"
                android:contentDescription="@string/search" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="@dimen/_10mdp">

                <EditText
                    android:id="@+id/signupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35mdp"
                    android:hint="@string/password"
                    tools:ignore="Autofill"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:textColorHint="@color/quantum_grey600"
                    android:textSize="@dimen/_14mdp"
                    android:paddingBottom="@dimen/_20mdp"
                    android:paddingStart="@dimen/_5mdp"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_marginTop="@dimen/_20mdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35mdp">
            <TextView
                android:id="@+id/signupbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttongrad1"
                android:textAlignment="center"
                android:text="@string/continu"
                android:textSize="@dimen/_16font_mdp"
                android:textColor="@color/white"
                android:fontFamily="@font/oxygen"
                android:textAllCaps="true"
                android:padding="@dimen/_6mdp"
                android:textStyle="bold"
                />
        </com.facebook.shimmer.ShimmerFrameLayout>


    </LinearLayout>


</LinearLayout>
